fix for span center align

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -247,6 +247,8 @@ a
       height: 250px
       margin: 5px
       text-align: center
+      display: flex
+      justify-content: center
       position: relative
       span
         text-transform: uppercase
@@ -257,6 +259,8 @@ a
 
     .services-link
       background-color: rgba(237, 51, 18, 0.5)
+    .portfolio-link
+      background-color: rgba(237, 178, 63, 0.5)
     .catalog-link
       background-color: rgba(242, 232, 26, 0.51)
 
